style.css
body {
    display: flex;
    flex-direction: row;
    justify-content: center;
    text-align: center;
    overflow: scroll;
}

footer {
    position: fixed;
    bottom: 0;
    right: 0;
    width: 100%;
    height: 10%;
    background-color: black;
    display: none;
}

table, th, td{
    border: 1px solid black;
    border-collapse: collapse;
}

td {
    padding: 10px 15px 10px 15px;
}

.book-card {
    display: flex;
    flex-direction: column;
    padding: 20px 0 20px 0;
    height: 350px;
    overflow-y: scroll;     
    width: 100%;
    box-sizing: content-box;
    font-size: 30px;
    border: 2px solid black;
}

.read-yet-toggle {
    margin-bottom: 10px;
}

#card-container {
    padding-top: 50px;
    display: grid;
    justify-self: center;
    grid-template-columns: repeat(5, 1fr);
    width: 100%;
    column-gap: 50px;
    row-gap: 50px;
}

#input-pages {
    width: 60px;
}

#form-div {
    position: fixed;
    overflow: hidden;
    left: 0;
    opacity: 0;
    background-color: white;
}

#main-container {
    width: 90%;
}

#new-card-form {
    position: relative;
    left: -300px;
    width: inherit;
}

@keyframes form-slidein {
    0% {
        opacity: 0;
    }
    100% {
        transform:translateX(300px);
        opacity: 1;
    }
}

@keyframes form-slideout {
    0% {
    }
    100% {
        transform:translateX(-300px);
    }
}

@keyframes become-transparent {
    0% {
        opacity: 1;
    }
    50% {
        opacity: 1;
    }
    100% {
        opacity: 0;
    }
}

@keyframes become-opaque {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}


/* #new-card-form.show {
    display: block;
} */

